--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Jarod</span><br>Web Desain Grafis&3D
                 </h1>
 
-                <a href="#" class="button">Contact</a>
+                <a href="#" class="button">Download CV</a>
             </div>
 
 
